# strategy-skill

./: README.md  gen_natr_ntps_mrc_sar.py
.claude-plugin/: marketplace.json  plugin.json
skills/analysis/: SKILL.md
skills/create-strategy/: SKILL.md
skills/strategy-conditions/: SKILL.md
skills/strategy-indicators/: SKILL.md
skills/strategy-initialization/: SKILL.md
skills/strategy-modifications/: SKILL.md
skills/strategy-on-actions/: SKILL.md
skills/strategy-rust-module/: SKILL.md
skills/strategy-values/: SKILL.md
solutions/strategy-rust-module/: README.md
solutions/strategy-rust-module/scaffold/: Cargo.toml  bot_group.dynamic_module.template.json  module.manifest.template.json
solutions/strategy-rust-module/scaffold/src/: engine.rs  main.rs  state.rs
solutions/strategy-settings/: README.md
